GNOME Bugzilla – Bug 674811
gi: Improve error message when we get a non-function for a callback
Last modified: 2012-04-25 16:16:44 UTC
Print the type we received too
Created attachment 212808 [details] [review] gi: Improve error message when we get a non-function for a callback
Review of attachment 212808 [details] [review]: Looks good.
Attachment 212808 [details] pushed as 619abbf - gi: Improve error message when we get a non-function for a callback