gi: Improve error message when we get a non-function for a callback

Print the type we received too

https://bugzilla.gnome.org/show_bug.cgi?id=674811